# kcs

./: .gitignore  LICENSE  README.md  pyproject.toml
src/kcs/: __init__.py  __main__.py  cli.py  config.py  controller.py  k8s.py  mcp.py
src/kcs/server/: __init__.py  app.py  main.py  models.py  services.py
src/kcs/server/routes/: __init__.py  clusters.py  containers.py  mcp_routes.py  system.py
src/kcs/static/: index.html
tests/: common.py  performance.py  runner.py  test_api.py  test_lifecycle.py  test_mcp.py  test_system.py  test_upload.py
